--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <h6 class="pt-20 text-center">LinkedIn Campaigns</h6>
-                    <h3 class="text-center pt-10 max-237">Managed company and personal campaigns</h3>
+                    <h3 class="text-center pt-10 max-237">Company and personal campaigns</h3>
                 </div>
             </div>
         </div>
