--- a/org.index.html
+++ b/org.index.html
@@ -594,7 +594,6 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <!--form-->
 
                     <style type="text/css" scoped>
                         .mauticform_wrapper {
@@ -725,54 +724,53 @@
                             display: inline;
                         }
                     </style>
-                    <div id="mauticform_wrapper_kaicookecontact" class="mauticform_wrapper">
-                        <form autocomplete="false" role="form" method="post" action="http://app.whitepaper.marketing:8081/form/submit?formId=1" id="mauticform_kaicookecontact" data-mautic-form="kaicookecontact" enctype="multipart/form-data">
-                            <div class="mauticform-error" id="mauticform_kaicookecontact_error"></div>
-                            <div class="mauticform-message" id="mauticform_kaicookecontact_message"></div>
+                    <div id="mauticform_wrapper_testform" class="mauticform_wrapper">
+                        <form autocomplete="false" role="form" method="post" action="https://app.whitepaper.marketing/form/submit?formId=1" id="mauticform_testform" data-mautic-form="testform" enctype="multipart/form-data">
+                            <div class="mauticform-error" id="mauticform_testform_error"></div>
+                            <div class="mauticform-message" id="mauticform_testform_message"></div>
                             <div class="mauticform-innerform">
 
 
                                 <div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
 
-                                    <div id="mauticform_kaicookecontact_firstname" data-validate="firstname" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
-                                        <input id="mauticform_input_kaicookecontact_firstname" name="mauticform[firstname]" value="" placeholder="First Name:" class="mauticform-input" type="text">
-                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your first name</span>
-                                    </div>
-
-                                    <div id="mauticform_kaicookecontact_lastname" data-validate="lastname" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
-                                        <input id="mauticform_input_kaicookecontact_lastname" name="mauticform[lastname]" value="" placeholder="Last Name:" class="mauticform-input" type="text">
-                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your last name</span>
-                                    </div>
-
-                                    <div id="mauticform_kaicookecontact_email" data-validate="email" data-validation-type="email" class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
-                                        <input id="mauticform_input_kaicookecontact_email" name="mauticform[email]" value="" placeholder="Email:" class="mauticform-input" type="email">
-                                        <span class="mauticform-errormsg" style="display: none;">Please fill in your email</span>
-                                    </div>
-
-                                    <div id="mauticform_kaicookecontact_phone" class="mauticform-row mauticform-tel mauticform-field-4">
-                                        <input id="mauticform_input_kaicookecontact_phone" name="mauticform[phone]" value="" placeholder="Phone:" class="mauticform-input" type="tel">
+                                    <div id="mauticform_testform_firstname" class="mauticform-row mauticform-text mauticform-field-1">
+                                        <label id="mauticform_label_testform_firstname" for="mauticform_input_testform_firstname" class="mauticform-label">Firstname</label>
+                                        <input id="mauticform_input_testform_firstname" name="mauticform[firstname]" value="" class="mauticform-input" type="text">
                                         <span class="mauticform-errormsg" style="display: none;"></span>
                                     </div>
 
-                                    <div id="mauticform_kaicookecontact_f_message" data-validate="f_message" data-validation-type="textarea" class="mauticform-row mauticform-text mauticform-field-5 mauticform-required">
-                                        <textarea placeholder="Message" id="mauticform_input_kaicookecontact_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
-                                        <span class="mauticform-errormsg" style="display: none;">Please write your message</span>
+                                    <div id="mauticform_testform_lastname" class="mauticform-row mauticform-text mauticform-field-2">
+                                        <label id="mauticform_label_testform_lastname" for="mauticform_input_testform_lastname" class="mauticform-label">Lastname</label>
+                                        <input id="mauticform_input_testform_lastname" name="mauticform[lastname]" value="" class="mauticform-input" type="text">
+                                        <span class="mauticform-errormsg" style="display: none;"></span>
                                     </div>
 
-                                    <div id="mauticform_kaicookecontact_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
-                                        <button type="submit" name="mauticform[submit]" id="mauticform_input_kaicookecontact_submit" value="" class="mauticform-button btn btn-default">Submit</button>
+                                    <div id="mauticform_testform_email" data-validate="email" data-validation-type="email" class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
+                                        <label id="mauticform_label_testform_email" for="mauticform_input_testform_email" class="mauticform-label">Email</label>
+                                        <input id="mauticform_input_testform_email" name="mauticform[email]" value="" placeholder="Please put email" class="mauticform-input" type="email">
+                                        <span class="mauticform-errormsg" style="display: none;">This is required.</span>
+                                    </div>
+
+                                    <div id="mauticform_testform_f_message" class="mauticform-row mauticform-text mauticform-field-4">
+                                        <label id="mauticform_label_testform_f_message" for="mauticform_input_testform_f_message" class="mauticform-label">Message</label>
+                                        <textarea id="mauticform_input_testform_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
+                                        <span class="mauticform-errormsg" style="display: none;"></span>
+                                    </div>
+
+                                    <div id="mauticform_testform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-5">
+                                        <button type="submit" name="mauticform[submit]" id="mauticform_input_testform_submit" value="" class="mauticform-button btn btn-default">Submit</button>
                                     </div>
                                 </div>
                             </div>
 
-                            <input type="hidden" name="mauticform[formId]" id="mauticform_kaicookecontact_id" value="1">
-                            <input type="hidden" name="mauticform[return]" id="mauticform_kaicookecontact_return" value="">
-                            <input type="hidden" name="mauticform[formName]" id="mauticform_kaicookecontact_name" value="kaicookecontact">
+                            <input type="hidden" name="mauticform[formId]" id="mauticform_testform_id" value="1">
+                            <input type="hidden" name="mauticform[return]" id="mauticform_testform_return" value="">
+                            <input type="hidden" name="mauticform[formName]" id="mauticform_testform_name" value="testform">
 
                         </form>
                     </div>
 
-                    <!-- end form -->
+
 
 
                 </div>
@@ -1017,7 +1015,6 @@
 
 
     <!-- mautic form -->
-
     <script type="text/javascript">
         /** This section is only needed once per page if manually copying **/
         if (typeof MauticSDKLoaded == 'undefined') {
@@ -1025,12 +1022,12 @@
             var head = document.getElementsByTagName('head')[0];
             var script = document.createElement('script');
             script.type = 'text/javascript';
-            script.src = 'https://app.kaicooke.com/media/js/mautic-form.js';
+            script.src = 'https://app.whitepaper.marketing/media/js/mautic-form.js';
             script.onload = function() {
                 MauticSDK.onLoad();
             };
             head.appendChild(script);
-            var MauticDomain = 'https://app.kaicooke.com';
+            var MauticDomain = 'https://app.whitepaper.marketing';
             var MauticLang = {
                 'submittingMessage': "Please wait..."
             }
@@ -1038,7 +1035,6 @@
             MauticSDK.onLoad();
         }
     </script>
-
 
     <!-- mautic form -->
 
