--- a/index.html
+++ b/index.html
@@ -587,6 +587,67 @@
 
 
 
+    <!-- start edit form -->
+
+
+
+    <section class="contact-us bg-white" id="contactus">
+        <div class="container">
+            <!--Heading-->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="title d-inline-block">
+                        <h5 class="mb-3 text-capitalize">All of your customers are partners in your mission.</h5>
+                        <h2 class="text-capitalize gradient-text1">Let's Get In Touch</h2>
+                    </div>
+                </div>
+            </div>
+
+            <!--contact us-->
+            <form class="contact-form" id="contact-form-data">
+                <div class="row">
+
+                    <div class="col-sm-12" id="result"></div>
+
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="First Name:" required="" id="first_name" name="firstName">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Last Name:" required="" id="last_name" name="lastName">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <input class="form-control" type="email" placeholder="Email:" required="" id="email" name="userEmail">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="form-group">
+                            <input class="form-control" type="tel" placeholder="Phone:" id="phone" name="userPhone">
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            <textarea class="form-control" placeholder="Message" id="message" name="userMessage"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <button type="button" class="contact_btn btn btn-rounded btn-large btn-green mt-30" id="submit_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i> <span class="text-capitalize">Contact Now</span></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+
+
+
+    <!-- end edit form -->
+
+
 
     <section style="display: noned;" class="bg-light" id="">
         <h2 class="d-none">heading</h2>
