--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,22 @@
 
 
 
+    <!-- mautic tracking -->
+    <script>
+        (function(w, d, t, u, n, a, m) {
+            w['MauticTrackingObject'] = n;
+            w[n] = w[n] || function() {
+                    (w[n].q = w[n].q || []).push(arguments)
+                }, a = d.createElement(t),
+                m = d.getElementsByTagName(t)[0];
+            a.async = 1;
+            a.src = u;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://app.kaicooke.com/mtc.js', 'mt');
 
+        mt('send', 'pageview');
+    </script>
+    <!-- mautic tracking end -->
 
 </body>
 
