--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                                                     <li><a href="#." class="twitter-bg-hvr"><i class="fab fa-twitter" aria-hidden="true"></i></a> </li>
                                                     <li><a href="#." class="instagram-bg-hvr"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
                                                 -->
-                                                    <li><a href="#." class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
+                                                    <li><a href="https://www.linkedin.com/in/kaicooke/" class="linkedin-bg-hvr"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a> </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -969,7 +969,7 @@
                             <li><a class="wow fadeInUp instagram-bg-hvr" href="javascript:void(0);"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                             <li><a class="wow fadeInDown mail-bg-hvr" href="javascript:void(0);"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
                             -->
-                            <li><a class="wow fadeInDown linkedin-bg-hvr" href="javascript:void(0);"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                            <li><a class="wow fadeInDown linkedin-bg-hvr" href="https://www.linkedin.com/in/kaicooke/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                     <p class="company-about fadeIn text-capitalize">© 2020 KaiCooke. Made With Love By <a href="javascript:void(0);">RobertCooke</a></p>
