--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <!-- LAYER NR. 4 -->
                             <div class="tp-caption   tp-resizeme" id="slide-27-layer-2" data-x="['center','center','center','center']" data-hoffset="['-10','110','160','150']" data-y="['top','top','top','top']" data-voffset="['200','300','380','260']" data-width="568" data-height="none"
                                 data-whitespace="nowrap" data-fontsize="['52','52','40','40']" data-lineheight="['60','55','55','49']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":400,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['center','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 44px; line-height: 63px; font-weight: 700; color: #fff; letter-spacing: 0px;font-family:Raleway;">LinkedIn <span class="text-white">Campaigns</span></div>
+                                data-textAlign="['center','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 44px; line-height: 63px; font-weight: 700; color: #fff; letter-spacing: 0px;font-family:Raleway;">Reachout on <span class="text-white">LinkedIn</span></div>
 
                             <!-- LAYER NR. 5 -->
                             <div class="tp-caption   tp-resizeme" id="slide-27-layer-3" data-x="['center','center','center','center']" data-hoffset="['-7','-5','0','3']" data-y="['top','top','top','top']" data-voffset="['280','390','480','325']" data-width="['550','700','680','350']"
@@ -331,7 +331,7 @@
                             <!-- LAYER NR. 7 -->
                             <div class="tp-caption   tp-resizeme" id="slide-20-layer-11" data-x="['right','right','center','center']" data-hoffset="['46','50','160','160']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-50','-70','-75']" data-width="568" data-height="none"
                                 data-whitespace="nowrap" data-fontsize="['52','52','40','40']" data-lineheight="['60','55','55','49']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":500,"frame":"999","to":"opacity:0;","ease":"Power1.easeOut"}]'
-                                data-textAlign="['right','right','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 46px; line-height: 63px; font-weight: 700; color: #2c3459; letter-spacing: 0px;font-family:Raleway;">Email <span class="orange">Campaigns</span></div>
+                                data-textAlign="['right','right','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 46px; line-height: 63px; font-weight: 700; color: #2c3459; letter-spacing: 0px;font-family:Raleway;">Reachout with <span class="orange">Email</span></div>
 
                             <!-- LAYER NR. 8 -->
                             <div class="tp-caption   tp-resizeme" id="slide-20-layer-12" data-x="['right','right','center','center']" data-hoffset="['50','50','30','3']" data-y="['top','top','top','top']" data-voffset="['280','375','475','325']" data-width="['500','550','680','350']"
@@ -386,7 +386,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="pt-20 text-center">Email Campaigns</h6>
+                    <h6 class="pt-20 text-center">Reachout with Email</h6>
                     <h3 class="text-center pt-10 max-237">Inbound and outbound campaigns</h3>
                 </div>
                 <div class="col-md-4 mt-80 margin-50">
@@ -397,7 +397,7 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="pt-20 text-center">LinkedIn Campaigns</h6>
+                    <h6 class="pt-20 text-center">Reachout on LinkedIn</h6>
                     <h3 class="text-center pt-10 max-237">Company and personal campaigns</h3>
                 </div>
             </div>
@@ -420,8 +420,8 @@
                     <p class="pt-3 wow fadeInUp about-p" data-wow-delay="500ms" style="visibility: visible; animation-delay: 500ms; animation-name: fadeInUp;">Listening is hearing the needs of the customer, understanding those needs and making sure the company recognises the opportunity they present.</p>
                     <ul class="pl-0 pt-2 left-about wow fadeInUp bg-grey" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
                         <li>Market Research</li>
-                        <li>Email Campaigns</li>
-                        <li>LinkedIn Campaigns</li>
+                        <li>Email Reachout</li>
+                        <li>LinkedIn Reachout</li>
                     </ul>
                     <a class="btn btn-rounded btn-large btn-green text-capitalize mt-30">Get Started</a>
                 </div>
