--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -171,7 +171,7 @@
                     <div class="text-left">
                         <aside class="sidebar padding-bottom">
                             <div class="widget heading_space mb-lg-0">
-                                <h4 class="darkcolor pb-10 align-left text-11 blue">Current Projects</h4>
+                                <h4 class="darkcolor pb-10 align-left text-11 blue">Other Projects</h4>
                                 <ul class="webcats pb-10">
                                     <li><a class="a-recent" href="#.">Business<span>23</span></a></li>
                                     <li><a class="a-recent" href="#.">Car<span>09</span></a></li>
