--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <div class="serial-box">
                         <span class="count">750</span>
                         <p>Association Segmentation</p>
-                        <h4 class="project-code pt-10">Kai.Cooke.Asse</h4>
+                        <h4 class="project-code pt-10"><a style="color: #9da0b2;" href="Research-Project-Kai.Cooke.Asse.html">Kai.Cooke.Asse</a></h4>
                     </div>
                 </div>
                 <div class="col-md-3 padding-50">
