--- a/index.html
+++ b/index.html
@@ -362,8 +362,18 @@
                 <div class="col-lg-12 text-center">
                     <h4 class="">Researcher - Lecturer</h4>
                     <h2>Kai Cooke, PhD</h2>
-                    <p class="about-max pt-10">I am interested in doing research, co-writing/reviewing articles in the topic of Corporate Social Responsibility (CSR), Small and medium Enterprises and their environmental responsibility, stakeholder analysis in social policy, leadership
-                        and local government.</p>
+                    <p class="about-max pt-10">If your association has not conducted a recent member survey focused on segmentation rather than demographics, then realize it’s time.
+                    </p>
+                    <p class="about-max pt-10">
+                        No matter what type or size of your association, implementing regular primary research (direct surveys, focus groups, online polls, etc.) is crucial to building any communication plan.
+                    </p>
+                    <p class="about-max pt-10">
+                        Make sure to include a mix of demographics, lapsed members, and prospective members whenever possible.
+                    </p>
+                    <p class="about-max pt-10">
+                        Understanding the interests of your target audience, knowing what messages they want to hear, and by what method can be accomplished only when the right research has been done.
+
+                    </p>
                 </div>
             </div>
             <div class="row position-relative">
