--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- keywords -->
     <meta name="keywords" content="Creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, studio, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, studio, masonry, grid, faq">
     <!-- Page Title -->
-    <title>Market Research | KaiCooke Consulting</title>
+    <title>KaiCooke | Research</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
     <!-- Bundle -->
