--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
                             <!-- LAYER NR. 1 -->
                             <div class="tp-caption   tp-resizeme" id="slide-20-layer-2" data-x="['left','left','center','center']" data-hoffset="['37','40','100','118']" data-y="['top','top','top','top']" data-voffset="['190','300','380','260']" data-width="568" data-height="none"
                                 data-whitespace="nowrap" data-fontsize="['52','52','50','40']" data-lineheight="['60','55','55','49']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":400,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 46px; line-height: 63px; font-weight: 700; color: #2c3459; letter-spacing: 0px;font-family:Raleway;">Market <span class="orange">Research</span></div>
+                                data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 46px; line-height: 63px; font-weight: 700; color: #2c3459; letter-spacing: 0px;font-family:Raleway;">Membership <span class="orange">Research</span></div>
 
                             <!-- LAYER NR. 2 -->
                             <div class="tp-caption   tp-resizeme" id="slide-20-layer-3" data-x="['left','left','center','center']" data-hoffset="['38','40','8','3']" data-y="['top','top','top','top']" data-voffset="['280','390','480','325']" data-width="['500','700','680','350']"
                                 data-height="none" data-whitespace="normal" data-fontsize="['18','25','25','14']" data-lineheight="['25','40','40','23']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":3000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:0.8;sY:0.8;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":600,"frame":"999","to":"opacity:0;","ease":"Power1.easeInOut"}]'
-                                data-textAlign="['inherit','left','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: normal; font-size: 18px; line-height: 25px; font-weight: 300; color: #444444; letter-spacing: 1.5px;font-family:Open Sans;">Market research and competitive analysis
+                                data-textAlign="['inherit','left','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: normal; font-size: 18px; line-height: 25px; font-weight: 300; color: #444444; letter-spacing: 1.5px;font-family:Open Sans;">Membership research and engagement analysis
                             </div>
 
                             <!-- LAYER NR. 3 -->
@@ -294,7 +294,7 @@
                                 data-whitespace="nowrap" data-fontsize="['16','60','60','12']" data-lineheight="['60','55','55','10']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power1.easeInOut"}]'
                                 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 40px; font-weight: 600; letter-spacing: 0px;font-family:Open Sans;">
 
-                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#about">Get Started</a></div>
+                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#contactus">Get Started</a></div>
                         </li>
                         <!-- SLIDE 2 -->
                         <li data-index="rs-27" data-transition="slidebox" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="1500" data-thumb="images/slider_02.jpg" data-rotate="0" data-saveperformance="off"
@@ -318,7 +318,7 @@
                             <div class="tp-caption   tp-resizeme" id="slide-27-layer-6" data-x="['center','center','center','center']" data-hoffset="['-35','-70','-50','-63']" data-y="['top','top','top','top']" data-voffset="['360','520','610','430']" data-width="94" data-height="28"
                                 data-whitespace="nowrap" data-fontsize="['16','60','60','12']" data-lineheight="['60','55','55','10']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power1.easeInOut"}]'
                                 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 40px; font-weight: 600; color: #222d38; letter-spacing: 0px;font-family:Open Sans;">
-                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#about">Get Started</a></div>
+                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#contactus">Get Started</a></div>
 
                         </li>
                         <!-- SLIDE 3 -->
@@ -343,7 +343,7 @@
                             <div class="tp-caption   tp-resizeme" id="slide-20-layer-14" data-x="['right','right','center','center']" data-hoffset="['120','180','-50','-63']" data-y="['top','top','top','top']" data-voffset="['360','520','610','430']" data-width="94" data-height="28"
                                 data-whitespace="nowrap" data-fontsize="['16','60','60','12']" data-lineheight="['60','55','55','49']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":2500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power1.easeInOut"}]'
                                 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 15px; line-height: 28px; font-weight: 600; letter-spacing: 0px;font-family:Open Sans;">
-                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#about">Get Started</a></div>
+                                <a class="btn btn-rounded btn-large btn-green rev-slider text-capitalize scroll" href="#contactus">Get Started</a></div>
                         </li>
                     </ul>
                     <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -385,8 +385,8 @@
                             </div>
                         </div>
                     </div>
-                    <h6 class="pt-20 text-center">Market Research</h6>
-                    <h3 class="text-center pt-10 max-237">Market research and competitive analysis</h3>
+                    <h6 class="pt-20 text-center">Membership Research</h6>
+                    <h3 class="text-center pt-10 max-237">Membership research and engagement analysis</h3>
                 </div>
                 <div class="col-md-4 mt-80 margin-50">
                     <div class="icon-hover-effect">
@@ -429,11 +429,11 @@
                         <span class="orange">Research</span> is formalized curiosity, it is poking and prying <span class="orange">with a purpose</span>.</h2>
                     <p class="pt-3 wow fadeInUp about-p" data-wow-delay="500ms" style="visibility: visible; animation-delay: 500ms; animation-name: fadeInUp;">Listening is hearing the needs of the customer, understanding those needs and making sure the company recognises the opportunity they present.</p>
                     <ul class="pl-0 pt-2 left-about wow fadeInUp bg-grey" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
-                        <li>Market Research</li>
+                        <li>Membership Research</li>
                         <li>Email Reachout</li>
                         <li>LinkedIn Reachout</li>
                     </ul>
-                    <a class="btn btn-rounded btn-large btn-green text-capitalize mt-30">Get Started</a>
+                    <a class="btn btn-rounded btn-large btn-green text-capitalize mt-30 scroll" href="#contactus">Get Started</a>
                 </div>
             </div>
         </div>
@@ -691,7 +691,7 @@
                 <div class="col-md-12 text-center">
                     <div class="title d-inline-block">
                         <h5 class="mb-3 text-capitalize">All of your customers are partners in your mission.</h5>
-                        <h2 class="text-capitalize gradient-text1">Let's Get In Touch</h2>
+                        <h2 class="text-capitalize gradient-text1">Get In Touch</h2>
                     </div>
                 </div>
             </div>
