--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>Insurance</title>
+    <title>KaiCooke | Research</title>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
     <!-- Bundle -->
@@ -106,9 +106,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="text-capitalize mb-15 text-center text-white">Latest News Details</h2>
-                        <h5 class="text-white text-center">Do U Need Life Insurance When U Retire</h5>
-                        <div class="page_nav pt-10">
+                        <h2 class="text-capitalize mb-15 text-center text-white">Research project</h2>
+                        <h5 class="text-white text-center">Association Segmentation</h5>
+                        <div style="display: none;" class="page_nav pt-10">
                             <a href="index.html" class="text-white blog-15">Home</a> <span class="text-white blog-15"><i class="fa fa-angle-double-right text-white angle-font"></i> Latest News Details</span>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="reser-blog">
                             <a href="news.html">
-                                <h3 class="grey pt-20 pt-md-3">Take Care Of Your Family</h3>
+                                <h3 class="grey pt-20 pt-md-3">Association Segmentation</h3>
                             </a>
                         </div>
                         <div class="comment-text">
@@ -173,10 +173,10 @@
                             <div class="widget heading_space mb-lg-0">
                                 <h4 class="darkcolor pb-10 align-left text-11 blue">Other Projects</h4>
                                 <ul class="webcats pb-10">
-                                    <li><a class="a-recent" href="#.">Business<span>23</span></a></li>
-                                    <li><a class="a-recent" href="#.">Car<span>09</span></a></li>
-                                    <li><a class="a-recent" href="#.">Education<span>11</span></a></li>
-                                    <li><a class="a-recent" href="#.">Home<span>13</span></a></li>
+                                    <li><a class="a-recent" href="#.">Association Segmentation<span>23</span></a></li>
+                                    <li><a class="a-recent" href="#.">Virtual events and ROI<span>09</span></a></li>
+                                    <li><a class="a-recent" href="#.">Micro networks<span>11</span></a></li>
+                                    <li><a class="a-recent" href="#.">Association Technology<span>13</span></a></li>
                                 </ul>
                             </div>
                         </aside>
@@ -249,9 +249,10 @@
     <script src="vendor/js/extensions/revolution.extension.parallax.min.js"></script>
     <script src="vendor/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script src="vendor/js/extensions/revolution.extension.video.min.js"></script>
-    <!-- custom script -->
+    <!-- custom script 
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyCo_pcAdFNbTDCAvMwAD19oRTuEmb9M50c"></script>
     <script src="js/maps.min.js"></script>
+    -->
     <script src="js/script.js"></script>
 
 </body>
