--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -135,9 +135,9 @@
                         </div>
                         <div class="comment-text">
                             <ul class="comment mb-20">
-                                <li class="green mr-3"><a class="#."><i class="lni-calendar"></i></a>Mar 18</li>
-                                <li class="green mr-3"><a class="#."><i class="lni-comment"></i></a>12</li>
-                                <li class="green mr-3"><a class="#."><i class="lni-user"></i></a>Kaene</li>
+                                <li class="green mr-3"><a class="#."><i class="lni-calendar"></i></a>May 18 - Jun 22</li>
+                                <!--<li class="green mr-3"><a class="#."><i class="lni-comment"></i></a>12</li>-->
+                                <li class="green mr-3"><a class="#."><i class="lni-user"></i></a>Kai Cooke</li>
                             </ul>
 
                         </div>
@@ -153,7 +153,7 @@
                             Aenean lacus libero, volutpat at justo ut, eleifend.</p>
 
                     </article>
-                    <div class="post-shareit share-center text-11">
+                    <div style="display: none;" class="post-shareit share-center text-11">
                         <strong class="d-inline-block align-middle mb-2">Share:</strong>
                         <div class="contact-social-icon pb-10">
                             <ul class="social-icons mb-0 d-flex">
@@ -198,20 +198,24 @@
                 <div class="col-md-12">
                     <div class="footer-social">
                         <ul class="list-unstyled text-white">
+                            <!--
                             <li><a class="wow fadeInUp facebook-bg-hvr" href="javascript:void(0);"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                             <li><a class="wow fadeInDown twitter-bg-hvr" href="javascript:void(0);"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                             <li><a class="wow fadeInUp google-bg-hvr" href="javascript:void(0);"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a></li>
-                            <li><a class="wow fadeInDown linkedin-bg-hvr" href="javascript:void(0);"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                             <li><a class="wow fadeInUp instagram-bg-hvr" href="javascript:void(0);"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                             <li><a class="wow fadeInDown mail-bg-hvr" href="javascript:void(0);"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                            -->
+                            <li><a class="wow fadeInDown linkedin-bg-hvr" href="https://www.linkedin.com/in/kaicooke/"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
-                    <p class="company-about fadeIn text-capitalize">© 2020 Megaone. Made With Love By <a href="javascript:void(0);">Themesindustry</a></p>
+                    <p class="company-about fadeIn text-capitalize">© 2020 KaiCooke. Made With Love By <a href="javascript:void(0);">RobertCooke</a></p>
                 </div>
             </div>
         </div>
     </section>
     <!--Footer End-->
+
+
 
 
 
