--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -51,7 +51,7 @@
         <!--Navigation-->
         <nav class="navbar navbar-top-default nav-radius navbar-expand-lg">
             <div class="container">
-                <a href="index.html" title="Logo" class="logo scroll">
+                <a href="index.html" title="Logo" class="logo ">
                     <!--Logo Default-->
                     <img src="img/logo.png" alt="logo" class="logo-dark logo-default">
                     <img src="img/logo.png" alt="logo" class="logo-light logo-scrolled">
@@ -173,10 +173,10 @@
                             <div class="widget heading_space mb-lg-0">
                                 <h4 class="darkcolor pb-10 align-left text-11 blue">Other Projects</h4>
                                 <ul class="webcats pb-10">
-                                    <li><a class="a-recent" href="#.">Association Segmentation<span>23</span></a></li>
-                                    <li><a class="a-recent" href="#.">Virtual events and ROI<span>09</span></a></li>
-                                    <li><a class="a-recent" href="#.">Micro networks<span>11</span></a></li>
-                                    <li><a class="a-recent" href="#.">Association Technology<span>13</span></a></li>
+                                    <li><a class="a-recent" href="#.">Association Segmentation<span>active</span></a></li>
+                                    <li><a class="a-recent" href="#.">Virtual events and ROI<span>planned</span></a></li>
+                                    <li><a class="a-recent" href="#.">Association Technology<span>planned</span></a></li>
+                                    <li><a class="a-recent" href="#.">Micro networks<span>done</span></a></li>
                                 </ul>
                             </div>
                         </aside>
