--- a/Research-Project-Kai.Cooke.Asse.html
+++ b/Research-Project-Kai.Cooke.Asse.html
@@ -174,9 +174,9 @@
                                 <h4 class="darkcolor pb-10 align-left text-11 blue">Other Projects</h4>
                                 <ul class="webcats pb-10">
                                     <li><a class="a-recent" href="#.">Association Segmentation<span>active</span></a></li>
+                                    <li><a class="a-recent" href="#.">Micro networks<span>active</span></a></li>
                                     <li><a class="a-recent" href="#.">Virtual events and ROI<span>planned</span></a></li>
                                     <li><a class="a-recent" href="#.">Association Technology<span>planned</span></a></li>
-                                    <li><a class="a-recent" href="#.">Micro networks<span>done</span></a></li>
                                 </ul>
                             </div>
                         </aside>
