--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             <!-- LAYER NR. 5 -->
                             <div class="tp-caption   tp-resizeme" id="slide-27-layer-3" data-x="['center','center','center','center']" data-hoffset="['-7','-5','0','3']" data-y="['top','top','top','top']" data-voffset="['280','390','480','325']" data-width="['550','700','680','350']"
                                 data-height="none" data-whitespace="normal" data-fontsize="['18','25','25','14']" data-lineheight="['25','40','40','23']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":0,"speed":3000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:0.8;sY:0.8;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power2.easeInOut"},{"delay":"wait","speed":600,"frame":"999","to":"opacity:0;","ease":"Power1.easeInOut"}]'
-                                data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: normal; font-size: 18px; line-height: 25px; font-weight: 300; color: #fff; letter-spacing: 1.5px;font-family:Open Sans;">Organization and personal campaigns
+                                data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: normal; font-size: 18px; line-height: 25px; font-weight: 300; color: #fff; letter-spacing: 1.5px;font-family:Open Sans;">Organization and personal outreach
                             </div>
 
                             <!-- LAYER NR. 6 -->
@@ -408,7 +408,7 @@
                         </div>
                     </div>
                     <h6 class="pt-20 text-center">Reachout on LinkedIn</h6>
-                    <h3 class="text-center pt-10 max-237">Organization and personal campaigns</h3>
+                    <h3 class="text-center pt-10 max-237">Organization and personal outreach</h3>
                 </div>
             </div>
         </div>
@@ -551,7 +551,9 @@
                                         <div class="team-box">
                                             <h3 class="font-weight-normal text-white">Kai Cooke, PhD</h3>
                                             <h6 class="font-weight-light text-white">Researcher - Lecturer</h6>
-                                            <p class="text-white">I am interested in doing research, co-writing/reviewing articles in the topic of Corporate Social Responsibility (CSR), Small and medium Enterprises.</p>
+                                            <p class="text-white">
+                                                I help and support membership executives manage their membership research.
+                                            </p>
                                             <div class="social_icons d-md-block">
                                                 <ul>
                                                     <!--   
