--- a/index.html
+++ b/index.html
@@ -362,16 +362,19 @@
                 <div class="col-lg-12 text-center">
                     <h4 class="">Researcher - Lecturer</h4>
                     <h2>Kai Cooke, PhD</h2>
-                    <p class="about-max pt-10">If your association has not conducted a recent member survey focused on segmentation rather than demographics, then realize it’s time.
-                    </p>
+                    <p class="about-max pt-10">Decisions affecting members have the greatest potential return on investment for the association.</p>
                     <p class="about-max pt-10">
-                        No matter what type or size of your association, implementing regular primary research (direct surveys, focus groups, online polls, etc.) is crucial to building any communication plan.
-                    </p>
+                        The ongoing collection, analysis, and use of membership information are critical for sustainable association growth and success.</p>
                     <p class="about-max pt-10">
-                        Make sure to include a mix of demographics, lapsed members, and prospective members whenever possible.
-                    </p>
+                        I help and support membership executives in managing this process by providing. </p>
                     <p class="about-max pt-10">
-                        Understanding the interests of your target audience, knowing what messages they want to hear, and by what method can be accomplished only when the right research has been done.
+
+                        <ul class="offer-list">
+                            <li>Market identification</li>
+                            <li>Membership environment assessment</li>
+                            <li>Association performance assessment</li>
+                            <li>Competing influence assessment</li>
+                        </ul>
 
                     </p>
                 </div>
