--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
                     <p class="pt-3 wow fadeInUp about-p" data-wow-delay="500ms" style="visibility: visible; animation-delay: 500ms; animation-name: fadeInUp;">Listening is hearing the needs of the customer, understanding those needs and making sure the company recognises the opportunity they present.</p>
                     <ul class="pl-0 pt-2 left-about wow fadeInUp bg-grey" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
                         <li>Membership Research</li>
-                        <li>Email Reachout</li>
-                        <li>LinkedIn Reachout</li>
+                        <li>Email Campaigns</li>
+                        <li>LinkedIn Outreachout</li>
                     </ul>
                     <a class="btn btn-rounded btn-large btn-green text-capitalize mt-30 scroll" href="#contactus">Get Started</a>
                 </div>
