--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     <ul class="pl-0 pt-2 left-about wow fadeInUp bg-grey" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
                         <li>Membership Research</li>
                         <li>Email Campaigns</li>
-                        <li>LinkedIn Outreachout</li>
+                        <li>LinkedIn Outreach</li>
                     </ul>
                     <a class="btn btn-rounded btn-large btn-green text-capitalize mt-30 scroll" href="#contactus">Get Started</a>
                 </div>
