--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h4 class="">Researcher - Lecturer</h4>
-                    <h2>Kai Cooke, PhD</h2>
+                    <h2>Kai Cooke, Ph.D.</h2>
                     <p class="about-max pt-10">Decisions affecting members have the greatest potential return on investment for the association.</p>
                     <p class="about-max pt-10">
                         The ongoing collection, analysis, and use of membership information are critical for sustainable association growth and success.</p>
@@ -552,7 +552,7 @@
                                     <!-- slide 2 -->
                                     <div class="swiper-slide active">
                                         <div class="team-box">
-                                            <h3 class="font-weight-normal text-white">Kai Cooke, PhD</h3>
+                                            <h3 class="font-weight-normal text-white">Kai Cooke, Ph.D.</h3>
                                             <h6 class="font-weight-light text-white">Researcher - Lecturer</h6>
                                             <p class="text-white">
                                                 I help and support membership executives manage their membership research.
